# ActQuant

./: .gitignore  CMakeLists.txt  README.md
src/: llama-quant.cpp
tools/: CMakeLists.txt
tools/fisher-diag/: compute_amf.py  compute_amf_lq.py  compute_fisher.py  compute_fisher_pi05.py  export_action_targets.py  export_oft_actions.py  get_pi05_calib_data.py  run_amf_lq_combined.sh  run_fisher_combined.sh
tools/hsic/: allocate.py  allocate_pi05.py  compute_hsic_pi05.py  compute_hsic_tensor.py  hsic_utils.py  run_hsic_fisher_quant.sh  run_hsic_quant_pi05.sh
tools/openvla-oft/: CMakeLists.txt  build_graph.cpp  build_graph.h  examples.cpp  export_openvla_oft.py  interface.cpp  llm.cpp  llm.h  main.cpp  model_defs.cpp  model_defs.h  model_loader.cpp  model_loader.h  openvla.cpp  openvla.h  reg.hpp  speed_test.py  test_openvla_oft.py  test_quantized_dinov2.py  utils.cpp  utils.h  vit.hpp
tools/pi0.5/: 01_setup_env.sh  02_prepare_models.sh  03_run_benchmark.sh  CMakeLists.txt  action_expert.hpp  build_graph.cpp  build_graph.h  ctx_manager.cpp  ctx_manager.h  export_pi05.py  export_pi05_llm.py  ggml_quant.py  hftokenizer.hpp  infer_session.hpp  interface.cpp  kv_cache_models.hpp  main.cpp  merge_pi05_llm.py  model_defs.cpp  model_defs.h  model_loader.cpp  model_loader.h  pi05.cpp  pi05.h  pi05_config.h  pi05_context.cpp  pi05_context.h  pi05_memory.cpp  pi05_memory.h  proj.hpp  run_imatrix_pi05.sh  run_libero_eval.sh  serve_policy.py  sp_tokenizer.hpp  text_embed.hpp  timer.hpp  utils.cpp  utils.h  vit.hpp
tools/quantize/: quantize.cpp
tools/quantize-vision/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  quantize-vision.cpp  test_quantization_accuracy.py  test_siglip_quantization.py
